--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vanilla Javascript example of locations map",
   "main": "script.js",
   "scripts": {
-    "start": "python -m SimpleHTTPServer"
+    "start": "browser-sync start --server --files \"**.css, *.html, **.js\""
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/nandrease/world_pins#readme",
   "devDependencies": {
-    "http-server": "^0.11.1"
+    "browser-sync": "^2.26.7"
   }
 }
